groups api changes

--- a/DanalakshmiChitsApi/appsettings.json
+++ b/DanalakshmiChitsApi/appsettings.json
@@ -17,7 +17,7 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "SampleConnectionString": "Data Source=LAPTOP-PSQI2MIH\\SQLEXPRESS;Initial Catalog=PracticeSolDB;Integrated Security=SSPI;Persist Security Info=true;MultipleActiveResultSets=true"
+    "SampleConnectionString": "Data Source=LAPTOP-PSQI2MIH\\SQLEXPRESS;Initial Catalog=PracticeSol;Integrated Security=SSPI;Persist Security Info=true;MultipleActiveResultSets=true"
     //"SampleConnectionString": "Data Source=Anvesh;Initial Catalog=PracticeSol;User=sa;Password=sqlsa@2019;Persist Security Info=true;MultipleActiveResultSets=true"
   }
 }
