--- a/DanalakshmiChitsApi/Properties/launchSettings.json
+++ b/DanalakshmiChitsApi/Properties/launchSettings.json
@@ -3,8 +3,7 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:3009",
-      "sslPort": 44303
+      "applicationUrl": "http://localhost:4400"
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
@@ -25,7 +24,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000"
+      "applicationUrl": "http://127.0.0.1:5000"
     }
   }
 }
