--- a/DanalakshmiChitsApi/Properties/launchSettings.json
+++ b/DanalakshmiChitsApi/Properties/launchSettings.json
@@ -3,7 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:4400"
+      "applicationUrl": "http://localhost:4400",
+      "sslPort": 44322
     }
   },
   "$schema": "http://json.schemastore.org/launchsettings.json",
