--- a/DanalakshmiChitsApi/DanalakshmiChitsApi.csproj
+++ b/DanalakshmiChitsApi/DanalakshmiChitsApi.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="MassTransit.Extensions.DependencyInjection" Version="7.3.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+    <PackageReference Include="System.Net.WebSockets" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
