Payment screen changes And net 6 changes

--- a/DanalakshmiChitsApi/appsettings.json
+++ b/DanalakshmiChitsApi/appsettings.json
@@ -18,6 +18,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     //"SampleConnectionString": "Data Source=LAPTOP-PSQI2MIH\\SQLEXPRESS;Initial Catalog=PracticeSol01;Integrated Security=SSPI;Persist Security Info=true;MultipleActiveResultSets=true"
-    "SampleConnectionString": "Data Source=Anvesh;Initial Catalog=PracticeSol01;User=sa;Password=sqlsa@2019;Persist Security Info=true;MultipleActiveResultSets=true"
-  }
+    "SampleConnectionString": "Data Source=wave2.grabweb.in,2419;Initial Catalog=dvchits;User=admindvchits;Password=DanaLakshmi@123;Persist Security Info=true;MultipleActiveResultSets=true"
+  } 
 }
